# User-Service

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  userservice.py  version.py
.github/workflows/: pytest.yaml
app/: server.py
src/userservice/: UserSevice.py  __init__.py  userservice.py  version.py
src/userservice/database/: BaseUserDB.py  SQLUserDB.py  __init__.py  schema.py
src/userservice/database/model/: sql.py
src/userservice/tests/: __init__.py  test_userservice.py
tests/: test.db  test_SQLUserDB.py  test_UserService.py
